latest code updated and working

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -226,7 +226,7 @@
 }
 
 /* Add FontAwesome */
-@import "@fortawesome/fontawesome-free/css/all.min.css";
+/* @import "@fortawesome/fontawesome-free/css/all.min.css"; */
 
 @layer base {
   * {
